--- a/eCommerce/templates/includes/header.html
+++ b/eCommerce/templates/includes/header.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="header">
   <div class="header-top">
     <div class="container">
@@ -130,7 +132,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 header-left">
-          <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="#"></a> </div>
+          <div class="logo"> <a href="index.html"><img src="{% static 'images/logo.png' %}" alt="#"></a> </div>
         </div>
         <div class="col-md-6 search_block">
           <div class="search">
