--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -13,9 +13,12 @@
     <div class="row">
       <div class="col-md-12">
         <div id="main-slider" class="owl-carousel">
-          <div class="item"><img src="images/main-banner1.jpg" alt="main-banner1"></div>
-          <div class="item"><img src="images/main-banner2.jpg" alt="main-banner2"></div>
-          <div class="item"><img src="images/main-banner3.jpg" alt="main-banner3"></div>
+          {% for carousel in self.header_carousel %}
+            {% image carousel.value.image width-800 as img %}
+
+            <div class="item"><img src="{{ img.url }}" alt="main-banner{{ forloop.counter0 }}"></div>
+
+          {% endfor %}
         </div>
       </div>
     </div>
