made nav items dynamic

--- a/eCommerce/templates/includes/menus.html
+++ b/eCommerce/templates/includes/menus.html
@@ -1,3 +1,7 @@
+{% load static wagtailcore_tags nav_tags %}
+{% get_navbar as navbars %}
+
+
 <div id="main-menu">
   <div class="container">
     <nav class="navbar navbar-default">
@@ -9,24 +13,27 @@
       </div>
       <div class="navbar-collapse collapse" id="navbar">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="grid-view.html">WOMEN</a></li>
-          <li><a href="grid-view.html">MEN</a><span class="new">new</span></li>
-          <li class="dropdown"> <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown"
-              class="dropdown-toggle" href="#"> PAGES<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="checkout.html">Checkout</a></li>
-              <li><a href="cart.html">Shoping Cart</a></li>
-              <li><a href="checkout-step1.html">Billing & shipping address</a></li>
-              <li><a href="checkout-step2.html">Delivery method </a></li>
-              <li><a href="checkout-step3.html">Payment method</a></li>
-              <li><a href="checkout-step4.html">Order riview</a></li>
-              <li><a href="404.html">Page Notfound</a></li>
-            </ul>
-          </li>
-          <li><a href="blog.html">BLOG</a></li>
-          <li><a href="contact-us.html">CONTACT US</a></li>
-          <li><a href="about-us.html">ABOUT US</a></li>
+
+          {% for navbar in navbars %}
+
+            <li {% if navbar.mega_menu.all.exists %}class="dropdown"{% endif %}>
+              <a {% if navbar.mega_menu.all.exists %}aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown"
+              class="dropdown-toggle"{% endif %} href="{{ navbar.main_link }}">
+                {{ navbar.name }}
+                {% if navbar.mega_menu.all.exists %}<span class="caret"></span>{% endif %}
+              </a>
+
+              {% if navbar.mega_menu.all.exists %}
+                <ul class="dropdown-menu">
+                  {% for item in navbar.mega_menu.all %}
+                    <li><a href="">{{ item.title }}</a></li>
+                  {% endfor %}
+                </ul>
+              {% endif %}
+
+            </li>
+
+          {% endfor %}
         </ul>
       </div>
     </nav>
