added product model, connected product_index template, made it dynamic

--- a/eCommerce/templates/base.html
+++ b/eCommerce/templates/base.html
@@ -1,4 +1,4 @@
-{% load static wagtailcore_tags home_tags wagtailuserbar wagtailsettings_tags %}
+{% load static wagtailcore_tags wagtailuserbar wagtailsettings_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
