--- a/eCommerce/templates/home/home_page.html
+++ b/eCommerce/templates/home/home_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static wagtailimages_tags %}
+{% load static wagtailimages_tags wagtailcore_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
@@ -14,9 +14,9 @@
       <div class="col-md-12">
         <div id="main-slider" class="owl-carousel">
           {% for carousel in self.header_carousel %}
-            {% image carousel.value.image width-800 as img %}
+          {% image carousel.value.image width-800 as img %}
 
-            <div class="item"><img src="{{ img.url }}" alt="main-banner{{ forloop.counter0 }}"></div>
+          <div class="item"><img src="{{ img.url }}" alt="main-banner{{ forloop.counter0 }}"></div>
 
           {% endfor %}
         </div>
@@ -37,16 +37,24 @@
             class="btn featured_next next"><i class="fa fa-angle-right"></i></a> </div>
         <div class="box">
           <div id="featured-products" class="owl-carousel">
+            {% for item in featured %}
+            {% image item.image fill-400x600 as img %}
             <div class="item">
               <div class="product-block ">
-                <div class="image"> <a href="product-detail-view.html"><img class="img-responsive" title="T-shirt"
-                      alt="T-shirt" src="images/product/feature-pro-2.jpg"></a> </div>
+                <div class="image">
+                  <a href="product-detail-view.html">
+                    <img class="img-responsive" title="T-shirt" alt="T-shirt" src="{{ img.url }}">
+                  </a>
+                </div>
                 <div class="product-details">
                   <div class="product-name">
-                    <h3><a href="product-detail-view.html">Black African Print Pencil Skirt
-                      </a></h3>
+                    <h3>
+                      <a href="product-detail-view.html">{{ item.title }}</a>
+                    </h3>
                   </div>
-                  <div class="price"> <span class="price-old">$123.20</span> <span class="price-new">$14.99</span>
+                  <div class="price">
+                    <span class="price-old">{{ item.old_price }}</span>
+                    <span class="price-new">{{ item.new_price }}</span>
                   </div>
                   <div class="product-hov">
                     <ul>
@@ -62,131 +70,7 @@
                 </div>
               </div>
             </div>
-            <div class="item">
-              <div class="product-block ">
-                <div class="image"> <a href="product-detail-view.html"><img class="img-responsive" title="T-shirt"
-                      alt="T-shirt" src="images/product/feature-pro-3.jpg"></a> </div>
-                <div class="product-details">
-                  <div class="product-name">
-                    <h3><a href="product-detail-view.html">Black African Print Pencil Skirt
-                      </a></h3>
-                  </div>
-                  <div class="price"> <span class="price-old">$123.20</span> <span class="price-new">$14.99</span>
-                  </div>
-                  <div class="product-hov">
-                    <ul>
-                      <li class="wish"><a href="#"></a></li>
-                      <li class="addtocart"><a href="#">Add to Cart</a> </li>
-                      <li class="compare"><a href="#"></a></li>
-                    </ul>
-                    <div class="review"> <span class="rate"> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star"></i>
-                      </span> </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="product-block ">
-                <div class="image"> <a href="product-detail-view.html"><img class="img-responsive" title="T-shirt"
-                      alt="T-shirt" src="images/product/feature-pro-4.jpg"></a> </div>
-                <div class="product-details">
-                  <div class="product-name">
-                    <h3><a href="product-detail-view.html">Black African Print Pencil Skirt
-                      </a></h3>
-                  </div>
-                  <div class="price"> <span class="price-old">$123.20</span> <span class="price-new">$14.99</span>
-                  </div>
-                  <div class="product-hov">
-                    <ul>
-                      <li class="wish"><a href="#"></a></li>
-                      <li class="addtocart"><a href="#">Add to Cart</a> </li>
-                      <li class="compare"><a href="#"></a></li>
-                    </ul>
-                    <div class="review"> <span class="rate"> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star"></i>
-                      </span> </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="product-block ">
-                <div class="image"> <a href="product-detail-view.html"><img class="img-responsive" title="T-shirt"
-                      alt="T-shirt" src="images/product/2prod281x366.jpg"></a> </div>
-                <div class="product-details">
-                  <div class="product-name">
-                    <h3><a href="product-detail-view.html">Black African Print Pencil Skirt
-                      </a></h3>
-                  </div>
-                  <div class="price"> <span class="price-old">$123.20</span> <span class="price-new">$14.99</span>
-                  </div>
-                  <div class="product-hov">
-                    <ul>
-                      <li class="wish"><a href="#"></a></li>
-                      <li class="addtocart"><a href="#">Add to Cart</a> </li>
-                      <li class="compare"><a href="#"></a></li>
-                    </ul>
-                    <div class="review"> <span class="rate"> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star"></i>
-                      </span> </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="product-block ">
-                <div class="image"> <a href="product-detail-view.html"><img class="img-responsive" title="T-shirt"
-                      alt="T-shirt" src="images/product/feature-pro-3.jpg"></a> </div>
-                <div class="product-details">
-                  <div class="product-name">
-                    <h3><a href="product-detail-view.html">Black African Print Pencil Skirt
-                      </a></h3>
-                  </div>
-                  <div class="price"> <span class="price-old">$123.20</span> <span class="price-new">$14.99</span>
-                  </div>
-                  <div class="product-hov">
-                    <ul>
-                      <li class="wish"><a href="#"></a></li>
-                      <li class="addtocart"><a href="#">Add to Cart</a> </li>
-                      <li class="compare"><a href="#"></a></li>
-                    </ul>
-                    <div class="review"> <span class="rate"> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star"></i>
-                      </span> </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="product-block ">
-                <div class="image"> <a href="product-detail-view.html"><img class="img-responsive" title="T-shirt"
-                      alt="T-shirt" src="images/product/feature-pro-2.jpg"></a> </div>
-                <div class="product-details">
-                  <div class="product-name">
-                    <h3><a href="product-detail-view.html">Black African Print Pencil Skirt
-                      </a></h3>
-                  </div>
-                  <div class="price"> <span class="price-old">$123.20</span> <span class="price-new">$14.99</span>
-                  </div>
-                  <div class="product-hov">
-                    <ul>
-                      <li class="wish"><a href="#"></a></li>
-                      <li class="addtocart"><a href="#">Add to Cart</a> </li>
-                      <li class="compare"><a href="#"></a></li>
-                    </ul>
-                    <div class="review"> <span class="rate"> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star rated"></i> <i
-                          class="fa fa-star rated"></i> <i class="fa fa-star"></i>
-                      </span> </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            {% endfor %}
           </div>
         </div>
       </div>
