--- a/eCommerce/templates/home/home_page.html
+++ b/eCommerce/templates/home/home_page.html
@@ -53,8 +53,8 @@
                     </h3>
                   </div>
                   <div class="price">
-                    <span class="price-old">{{ item.old_price }}</span>
-                    <span class="price-new">{{ item.new_price }}</span>
+                    <span class="price-old">{{ item.old_price }}&#2547;</span>
+                    <span class="price-new">{{ item.new_price }}&#2547;</span>
                   </div>
                   <div class="product-hov">
                     <ul>
