--- a/eCommerce/templates/product/product_index.html
+++ b/eCommerce/templates/product/product_index.html
@@ -11,8 +11,8 @@
                 <!-- right block Start  -->
                 <div id="right">
                     <div class="category-banner">
-                        {% image self.banner width-1200 as img %}
-                        <a href="#"><img src="{{ img.url }}" alt="#"></a>
+                        {% image self.banner width-1200 as banner %}
+                        <a href="#"><img src="{{ banner.url }}" alt="{{ banner.alt }}"></a>
                     </div>
 
                     <div class="product-grid-view">
@@ -20,49 +20,49 @@
 
                             {% for product in products %}
                             {% image product.image fill-400x600 as img %}
-                            <li>
-                                <div class="item col-md-4 col-sm-6 col-xs-6">
-                                    <div class="product-block ">
-                                        <div class="image">
-                                            <a href="product-detail-view.html">
-                                                <img class="img-responsive" title="T-shirt" alt="T-shirt"
-                                                    src="{{ img.url }}">
-                                            </a>
-                                        </div>
-                                        <div class="product-details">
-                                            <div class="product-name">
-                                                <h4>
-                                                    <a href="product-detail-view.html">
-                                                        {{ product.title }}
-                                                    </a>
-                                                </h4>
+                                <li>
+                                    <div class="item col-md-4 col-sm-6 col-xs-6">
+                                        <div class="product-block ">
+                                            <div class="image">
+                                                <a href="{{ product.url }}">
+                                                    <img class="img-responsive" title="T-shirt" alt="T-shirt"
+                                                        src="{{ img.url }}">
+                                                </a>
                                             </div>
-                                            <div class="price">
-                                                <span class="price-old">{{ product.old_price }}</span> <span
-                                                    class="price-new">{{ product.new_price }}</span>
-                                            </div>
-                                            <div class="product-hov">
-                                                <ul>
-                                                    <li class="wish"><a href="#"></a></li>
-                                                    <li class="addtocart">
-                                                        <a href="#">Add to Cart</a>
-                                                    </li>
-                                                    <li class="compare"><a href="#"></a></li>
-                                                </ul>
-                                                <div class="review">
-                                                    <span class="rate">
-                                                        <i class="fa fa-star rated"></i>
-                                                        <i class="fa fa-star rated"></i>
-                                                        <i class="fa fa-star rated"></i>
-                                                        <i class="fa fa-star rated"></i>
-                                                        <i class="fa fa-star"></i>
-                                                    </span>
+                                            <div class="product-details">
+                                                <div class="product-name">
+                                                    <h4>
+                                                        <a href="{{ product.url }}">
+                                                            {{ product.title }}
+                                                        </a>
+                                                    </h4>
+                                                </div>
+                                                <div class="price">
+                                                    <span class="price-old">{{ product.old_price }}&#2547;</span> <span
+                                                        class="price-new">{{ product.new_price }}&#2547;</span>
+                                                </div>
+                                                <div class="product-hov">
+                                                    <ul>
+                                                        <li class="wish"><a href="#"></a></li>
+                                                        <li class="addtocart">
+                                                            <a href="#">Add to Cart</a>
+                                                        </li>
+                                                        <li class="compare"><a href="#"></a></li>
+                                                    </ul>
+                                                    <div class="review">
+                                                        <span class="rate">
+                                                            <i class="fa fa-star rated"></i>
+                                                            <i class="fa fa-star rated"></i>
+                                                            <i class="fa fa-star rated"></i>
+                                                            <i class="fa fa-star rated"></i>
+                                                            <i class="fa fa-star"></i>
+                                                        </span>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </li>
+                                </li>
 
                             {% endfor %}
 
