fixed multiple image showing issue in product detail page, fixed  product model

--- a/eCommerce/templates/home/home_page.html
+++ b/eCommerce/templates/home/home_page.html
@@ -38,7 +38,7 @@
         <div class="box">
           <div id="featured-products" class="owl-carousel">
             {% for item in featured %}
-            {% image item.image fill-400x600 as img %}
+            {% image item.featured_image fill-400x600 as img %}
             <div class="item">
               <div class="product-block ">
                 <div class="image">
