--- a/eCommerce/templates/product/product_index.html
+++ b/eCommerce/templates/product/product_index.html
@@ -19,7 +19,7 @@
             <ul>
 
               {% for product in products %}
-              {% image product.image fill-400x600 as img %}
+              {% image product.featured_image fill-400x600 as img %}
               <li>
                 <div class="item col-md-4 col-sm-6 col-xs-6">
                   <div class="product-block ">
