--- a/eCommerce/templates/contact/contact.html
+++ b/eCommerce/templates/contact/contact.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="contact-submit">
-      <form action="{% url 'contact' %}">
+      <form action="{% url 'contact' %}" method="POST">
         {% csrf_token %}
         <div class="row">
           <div class="col-md-6 col-sm-12">
