--- a/eCommerce/templates/account/signup.html
+++ b/eCommerce/templates/account/signup.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <!-- Modal content-->
-<div class="container modal-content">
+<div class="container modal-content" style="margin-bottom: 50px;">
   <div class="modal-header">
     <div class="panel-heading">
       <div class="panel-title pull-left">Register</div>
