--- a/eCommerce/templates/includes/header.html
+++ b/eCommerce/templates/includes/header.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 header-left">
-          <div class="logo"> <a href="index.html"><img src="{% static 'images/logo.png' %}" alt="#"></a> </div>
+          <div class="logo"> <a href="/"><img src="{% static 'images/logo.png' %}" alt="#"></a> </div>
         </div>
         <div class="col-md-6 search_block">
           <div class="search">
@@ -63,10 +63,12 @@
         </div>
         <div class="col-md-3 header-right">
           <div class="cart">
-            <div class="cart-icon dropdown"></div>
-            <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown" class="dropdown-toggle"
-              href="cart.html">My Cart( 2 )<span> $261.20</span></a>
-            <ul class="dropdown-menu pull-right cart-dropdown-menu">
+            <div class="cart-icon"></div>
+
+            <a aria-expanded="false" aria-haspopup="true" role="button" href="{% url 'cart' %}">
+              My Cart( 2 )<span> $261.20</span>
+            </a>
+            <!-- <ul class="dropdown-menu pull-right cart-dropdown-menu">
               <li>
                 <table class="table table-striped">
                   <tbody>
@@ -118,7 +120,7 @@
                       href="checkout.html" id="checkout"><i class="fa fa-share"></i> Checkout</a> </div>
                 </div>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
