added user checking in base.html, added cart.js, working on homepage, product-index and product page for cart updating, removed modal from header, made cart and checkout page dynamic, added property methods to model classes, added dynamic functionality to cart and checkout views, added item to product hooks

--- a/eCommerce/templates/base.html
+++ b/eCommerce/templates/base.html
@@ -31,6 +31,11 @@
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
   {% endif %}
 
+  <!-- ======getting the authenticated user for adding product to cart===== -->
+  <script type="text/javascript">
+    const user = "{{ request.user }}"
+  </script>
+
 
   {% block extra_css %}
   {# Override this in templates to add extra stylesheets #}
@@ -68,6 +73,7 @@
   <script src="{% static 'Bootstrap/js/bootstrap.js' %}"></script>
   <script src="{% static 'js/owl.carousel.min.js' %}"></script>
   <script src="{% static 'js/globle.js' %}"></script>
+  <script src="{% static 'js/cart.js' %}"></script>
 
   {% block extra_js %}
   {# Override this in templates to add extra javascript #}
