--- a/eCommerce/templates/product/product_index.html
+++ b/eCommerce/templates/product/product_index.html
@@ -45,7 +45,7 @@
                       <div class="product-hov">
                         <ul>
                           <li class="wish"><a href="#"></a></li>
-                          <li class="addtocart">
+                          <li data-product="{{ product.id }}" data-action="add" class="addtocart update-cart">
                             <a href="#">Add to Cart</a>
                           </li>
                           <li class="compare"><a href="#"></a></li>
