--- a/eCommerce/templates/home/home_page.html
+++ b/eCommerce/templates/home/home_page.html
@@ -61,7 +61,7 @@
                   <div class="product-hov">
                     <ul>
                       <li class="wish"><a href="#"></a></li>
-                      <li class="addtocart"><a href="#">Add to Cart</a> </li>
+                      <li data-product="{{ item.id }}" data-action="add" class="addtocart update-cart"><a href="#">Add to Cart</a> </li>
                       <li class="compare"><a href="#"></a></li>
                     </ul>
                     <div class="review"> <span class="rate"> <i class="fa fa-star rated"></i> <i
