--- a/eCommerce/templates/product/cart.html
+++ b/eCommerce/templates/product/cart.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static wagtailimages_tags wagtailcore_tags %}
 {% block content %}
 <div id="bread-crumb">
   <div class="container">
@@ -7,15 +7,6 @@
       <div class="col-md-3 col-sm-3 col-xs-3">
         <div class="page-title">
           <h4>Shoping Cart</h4>
-        </div>
-      </div>
-      <div class="col-md-9 col-sm-9 col-xs-9">
-        <div class="bread-crumb">
-          <ul>
-            <li><a href="/">home</a></li>
-            <li>\</li>
-            <li><a href="cart.html">cart</a></li>
-          </ul>
         </div>
       </div>
     </div>
@@ -35,76 +26,36 @@
                 <td style="width:15%"> Product</td>
                 <td style="width:45%">Details</td>
                 <td style="width:10%">QNT</td>
-                <td style="width:5%">Discount</td>
                 <td style="width:15%">Total</td>
                 <td class="delete" style="width:10%">&nbsp;</td>
               </tr>
+              {% for item in items %}
               <tr class="Cartproduct">
                 <td>
-                  <div class="image"><a href="product-details.html"><img alt="img"
-                        src="images/product/cart70x92.jpg"></a></div>
+                  <div class="image">
+                    <a href="{{ item.product.url }}">
+                      {% image item.product.featured_image fill-100x150 as img %}
+                      <img alt="img" src="{{ img.url }}">
+                    </a>
+                  </div>
                 </td>
                 <td>
                   <div class="product-name">
-                    <h4><a href="product-detail-view.html">Black African Print Pencil Skirt </a></h4>
+                    <h4><a href="{{ item.product.url }}">{{ item.product.custom_title }}</a></h4>
                   </div>
                   <span class="size">24 x 2.3 M</span>
-                  <div class="price"><span>$8.80</span></div>
+                  <div class="price"><span>${{ item.product.new_price }}</span></div>
                 </td>
                 <td class="product-quantity">
                   <div class="quantity">
-                    <input type="number" size="4" class="input-text qty text" title="Qty" value="1" name="cart" min="0"
-                      step="1">
+                    <input type="number" size="4" class="input-text qty text" title="Qty" value="{{item.quantity}}"
+                      name="cart" min="0" step="1">
                   </div>
                 </td>
-                <td>0</td>
-                <td class="price">$300</td>
+                <td class="price">${{ item.get_total }}</td>
                 <td class="delete"><a title="Delete"> <i class="glyphicon glyphicon-trash "></i></a></td>
               </tr>
-              <tr class="Cartproduct">
-                <td>
-                  <div class="image"><a href="product-details.html"><img alt="img"
-                        src="images/product/cart2-70x92.jpg"></a></div>
-                </td>
-                <td>
-                  <div class="product-name">
-                    <h4><a href="product-detail-view.html">Black African Print Pencil Skirt </a></h4>
-                  </div>
-                  <span class="size">24 x 2.3 M</span>
-                  <div class="price"><span>$8.80</span></div>
-                </td>
-                <td class="product-quantity">
-                  <div class="quantity">
-                    <input type="number" size="4" class="input-text qty text" title="Qty" value="1" name="cart" min="0"
-                      step="1">
-                  </div>
-                </td>
-                <td>0</td>
-                <td class="price">$300</td>
-                <td class="delete"><a title="Delete"> <i class="glyphicon glyphicon-trash"></i></a></td>
-              </tr>
-              <tr class="Cartproduct">
-                <td>
-                  <div class="image"><a href="product-details.html"><img alt="img"
-                        src="images/product/car3-70x92.jpg"></a></div>
-                </td>
-                <td>
-                  <div class="product-name">
-                    <h4><a href="product-detail-view.html">Black African Print Pencil Skirt </a></h4>
-                  </div>
-                  <span class="size">24 x 2.3 M</span>
-                  <div class="price"><span>$8.80</span></div>
-                </td>
-                <td class="product-quantity">
-                  <div class="quantity">
-                    <input type="number" size="4" class="input-text qty text" title="Qty" value="1" name="cart" min="0"
-                      step="1">
-                  </div>
-                </td>
-                <td>0</td>
-                <td class="price">$300</td>
-                <td class="delete"><a title="Delete"> <i class="glyphicon glyphicon-trash "></i></a></td>
-              </tr>
+              {% endfor %}
             </tbody>
           </table>
         </div>
@@ -137,23 +88,19 @@
                     <tbody>
                       <tr>
                         <td>Total products</td>
-                        <td class="price">$125.05</td>
+                        <td class="price">{{ order.get_cart_items }}</td>
+                      </tr>
+                      <tr>
+                        <td>Total products price</td>
+                        <td class="price">${{ order.get_cart_total }}</td>
                       </tr>
                       <tr>
                         <td>Shipping</td>
                         <td class="price"><span class="success">Free shipping!</span></td>
                       </tr>
-                      <tr class="cart-total-price ">
-                        <td>Total (tax excl.)</td>
-                        <td class="price">$125.05</td>
-                      </tr>
-                      <tr>
-                        <td>Total tax</td>
-                        <td id="total-tax" class="price">$0.00</td>
-                      </tr>
                       <tr>
                         <td> Total</td>
-                        <td id="total-price">$125.05</td>
+                        <td id="total-price">${{ order.get_cart_total }}</td>
                       </tr>
                       <tr>
                         <td colspan="2">
