--- a/eCommerce/templates/product/product.html
+++ b/eCommerce/templates/product/product.html
@@ -78,7 +78,7 @@
                     </div>
                   </div>
                   <div class="add-to-cart">
-                    <button type="submit" class="btn btn-default">Add to Cart</button>
+                    <button data-product="{{ self.id }}" data-action="add" type="submit" class="btn btn-default update-cart">Add to Cart</button>
                   </div>
 
                 </div>
