added cart items and cart total context in every page, made add to cart functional, made quantity increases-decrease functional both in cart and checkout page, made csrftoken checking in base.html

--- a/eCommerce/templates/product/product_index.html
+++ b/eCommerce/templates/product/product_index.html
@@ -44,11 +44,10 @@
                       </div>
                       <div class="product-hov">
                         <ul>
-                          <li class="wish"><a href="#"></a></li>
-                          <li data-product="{{ product.id }}" data-action="add" class="addtocart update-cart">
-                            <a href="#">Add to Cart</a>
+                          <li class="addtocart">
+                            <button data-product="{{ product.id }}" data-action="add" type="submit"
+                              class="btn btn-default update-cart">Add to Cart</button>
                           </li>
-                          <li class="compare"><a href="#"></a></li>
                         </ul>
                         <div class="review">
                           <span class="rate">
