--- a/eCommerce/templates/includes/header.html
+++ b/eCommerce/templates/includes/header.html
@@ -66,7 +66,7 @@
             <div class="cart-icon"></div>
 
             <a aria-expanded="false" aria-haspopup="true" role="button" href="{% url 'cart' %}">
-              My Cart( 2 )<span> $261.20</span>
+              My Cart( {{ cartItems }} )<span>&#2547; {{ cartTotal }}</span>
             </a>
           </div>
         </div>
