--- a/eCommerce/templates/product/cart.html
+++ b/eCommerce/templates/product/cart.html
@@ -48,8 +48,9 @@
                 </td>
                 <td class="product-quantity">
                   <div class="quantity">
-                    <input type="number" size="4" class="input-text qty text" title="Qty" value="{{item.quantity}}"
-                      name="cart" min="0" step="1">
+                    <input data-product="{{ item.product.id }}" data-action="add-remove" type="number" size="4"
+                      class="input-text qty text update-cart" title="Qty" value="{{item.quantity}}" name="cart" min="0"
+                      step="1">
                   </div>
                 </td>
                 <td class="price">${{ item.get_total }}</td>
