--- a/eCommerce/templates/product/product.html
+++ b/eCommerce/templates/product/product.html
@@ -66,19 +66,21 @@
                   <div class="product-qty">
                     <label for="qty">Qty:</label>
                     <div class="custom-qty">
-                      <button
+                      <button data-product="{{ self.id }}" data-action="remove"
                         onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) result.value--;return false;"
-                        class="reduced items" type="button"> <i class="fa fa-minus"></i>
+                        class="reduced items update-cart" type="button"> <i class="fa fa-minus"></i>
                       </button>
-                      <input type="text" class="input-text qty" title="Qty" value="1" maxlength="8" id="qty" name="qty">
-                      <button
+                      <input type="text" class="input-text qty" title="Qty" value="{{ orderQuantity }}" maxlength="8"
+                        id="qty" name="qty">
+                      <button data-product="{{ self.id }}" data-action="add"
                         onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty )) result.value++;return false;"
-                        class="increase items" type="button"> <i class="fa fa-plus"></i>
+                        class="increase items update-cart" type="button"> <i class="fa fa-plus"></i>
                       </button>
                     </div>
                   </div>
                   <div class="add-to-cart">
-                    <button data-product="{{ self.id }}" data-action="add" type="submit" class="btn btn-default update-cart">Add to Cart</button>
+                    <button data-product="{{ self.id }}" data-action="add" type="submit"
+                      class="btn btn-default update-cart">Add to Cart</button>
                   </div>
 
                 </div>
