removed unwanted codes from the codebase and modified some

--- a/eCommerce/templates/contact/contact.html
+++ b/eCommerce/templates/contact/contact.html
@@ -13,7 +13,7 @@
             <a class="google-map-code" href="http://www.themecircle.net" id="get-map-data">themecircle.net</a>
           </div>
           <script
-            type="text/javascript"> function init_map() { var isDraggable = $(document).width() > 480 ? true : false; var myOptions = { zoom: 14, center: new google.maps.LatLng(40.7202626, -73.98965280000004), scrollwheel: false, mapTypeId: google.maps.MapTypeId.ROADMAP }; map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions); marker = new google.maps.Marker({ map: map, position: new google.maps.LatLng(40.7202626, -73.98965280000004) }); infowindow = new google.maps.InfoWindow({ content: "<b>lionode</b><br/>218 , sarthana Allen st<br/> new yourk" }); google.maps.event.addListener(marker, "click", function () { infowindow.open(map, marker); }); infowindow.open(map, marker); } google.maps.event.addDomListener(window, 'load', init_map);</script>
+            type="text/javascript"> function init_map() { var isDraggable = $(document).width() > 480 ? true : false; var myOptions = { zoom: 14, center: new google.maps.LatLng(23.735297, 90.385075), scrollwheel: false, mapTypeId: google.maps.MapTypeId.ROADMAP }; map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions); marker = new google.maps.Marker({ map: map, position: new google.maps.LatLng(23.735297, 90.385075) }); infowindow = new google.maps.InfoWindow({ content: "<b>lionode</b><br/>218 , sarthana Allen st<br/> new yourk" }); google.maps.event.addListener(marker, "click", function () { infowindow.open(map, marker); }); infowindow.open(map, marker); } google.maps.event.addDomListener(window, 'load', init_map);</script>
         </div>
       </div>
     </div>
@@ -21,8 +21,9 @@
       <div class="col-md-offset-2 col-md-8">
         <div class="contact-title">
           <h2 class="tf">Contact</h2>
-          <p class="text-center">Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis
-            imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est </p>
+          <p class="text-center">
+            If you have any query, Please fill up the form below and send us your inquiry.
+          </p>
         </div>
       </div>
     </div>
