--- a/eCommerce/templates/product/all_product_listing_page.html
+++ b/eCommerce/templates/product/all_product_listing_page.html
@@ -25,7 +25,7 @@
                   <div class="product-block ">
                     <div class="image">
                       <a href="{{ product.url }}">
-                        <img class="img-responsive" title="T-shirt" alt="T-shirt" src="{{ img.url }}">
+                        <img class="img-responsive" alt="{{ img.alt }}" src="{{ img.url }}">
                       </a>
                     </div>
                     <div class="product-details">
@@ -44,20 +44,10 @@
                       </div>
                       <div class="product-hov">
                         <ul>
-                          <li class="addtocart">
-                            <button data-product="{{ product.id }}" data-action="add" type="submit"
-                              class="btn btn-default update-cart">Add to Cart</button>
+                          <li class="prduct-details">
+                            <a href="{{ product.url }}" class="btn btn-default">View Details</a>
                           </li>
                         </ul>
-                        <div class="review">
-                          <span class="rate">
-                            <i class="fa fa-star rated"></i>
-                            <i class="fa fa-star rated"></i>
-                            <i class="fa fa-star rated"></i>
-                            <i class="fa fa-star rated"></i>
-                            <i class="fa fa-star"></i>
-                          </span>
-                        </div>
                       </div>
                     </div>
                   </div>
@@ -69,21 +59,11 @@
             </ul>
           </div>
         </div>
-        <div class="row">
-          <div class="pagination-bar">
-            <ul>
-              <li><a href="#"><i class="fa fa-angle-left"></i></a></li>
-              <li class="active"><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-            </ul>
-          </div>
-        </div>
-        <!-- right block end  -->
       </div>
+      <!-- right block end  -->
     </div>
   </div>
+</div>
 </div>
 
 
