added size and color to orderItem model, add functionality for adding size and color when adding to cart, made the color and size visible in cart, checkout page, refined add to cart functionality

--- a/eCommerce/templates/product/checkout.html
+++ b/eCommerce/templates/product/checkout.html
@@ -150,7 +150,8 @@
                         <div class="product-name">
                           <h3><a href="{{ item.product.url }}">{{ item.product.custom_title }}</a></h3>
                         </div>
-                        <span class="size">24 x 2.3 M</span>
+                        <span class="size">Size: {{ item.size }}</span>
+                        <span class="color">Color: {{ item.color }}</span>
                         <div class="price"><span>&#2547; {{ item.product.new_price }}</span></div>
                       </td>
                       <td class="product-quantity">
