--- a/eCommerce/templates/product/cart.html
+++ b/eCommerce/templates/product/cart.html
@@ -43,7 +43,8 @@
                   <div class="product-name">
                     <h4><a href="{{ item.product.url }}">{{ item.product.custom_title }}</a></h4>
                   </div>
-                  <span class="size">24 x 2.3 M</span>
+                  <span class="size">Size: {{ item.size }}</span>
+                  <span class="color">Color: {{ item.color }}</span>
                   <div class="price"><span>${{ item.product.new_price }}</span></div>
                 </td>
                 <td class="product-quantity">
