fixed continue-shopping button url with django context, removed js function

--- a/eCommerce/templates/product/cart.html
+++ b/eCommerce/templates/product/cart.html
@@ -68,7 +68,7 @@
         <div class="cart-bottom">
           <div class="box-footer">
             <div class="pull-left">
-              <a id="continue-shopping-btn" class="btn btn-default">
+              <a href="{{ preUrl }}" id="continue-shopping-btn" class="btn btn-default">
                 <i class="fa fa-arrow-left"></i> &nbsp;
                 Continue shopping
               </a>
